force-app/main/default/objects/AI_Voice_Configuration_Detail__c/AI_Voice_Configuration_Detail__c.object-meta.xml
<CustomObject>
    <label>Voice Configuration Detail</label>
    <nameField>
        <displayFormat>CD-{0000000}</displayFormat>
        <label>Configuration Detail #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voice Configuration Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>