force-app/main/default/objects/AI_Voice_Configuration_Detail__c/fields/AI_Prompt__c.field-meta.xml
<CustomField>
    <fullName>AI_Prompt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prompt</label>
    <referenceTo>AI_Prompt__c</referenceTo>
    <relationshipLabel>Voice Configuration Details</relationshipLabel>
    <relationshipName>Voice_Configuration_Details</relationshipName>
    <type>Lookup</type>
</CustomField>