force-app/main/default/objects/AI_Voice_Configuration_Detail__c/fields/AI_Voice_Configuration__c.field-meta.xml
<CustomField>
    <fullName>AI_Voice_Configuration__c</fullName>
    <label>Voice Configuration</label>
    <referenceTo>AI_Voice_Configuration__c</referenceTo>
    <relationshipLabel>Voice Configuration Details</relationshipLabel>
    <relationshipName>Voice_Configuration_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>